last view recipes path created
